# Repo2Dataset

./: .gitignore  LICENSE  README.md  generate_semantic_api.py  gh-chat-upgrade.patch  pyproject.toml
gh_chat_dataset/: __init__.py  builders.py  cli.py  discover.py  extract_js.py  extract_md.py  extract_py.py  postprocess.py
src/calculator_app/: __init__.py  app.py
src/calculator_app/static/: styles.css
src/calculator_app/templates/: index.html
src/gh_chat_dataset/: builders.py  cli.py  discover.py  extract_js.py  extract_md.py  extract_py.py  postprocess.py  semantic_types.py  tokenize_util.py
src/gh_chat_dataset/semantic_pipeline/: __init__.py  cluster.py  embedder.py  ontology.py  parser.py  pipeline.py  synthesizer.py  writer.py
src/gh_chat_dataset/webapp/: __init__.py  jobs.py  server.py  services.py
src/gh_chat_dataset/webapp/static/: app.js  styles.css
src/gh_chat_dataset/webapp/templates/: browse_output.html  index.html
tests/: test_builders_new.py  test_extractors.py
