[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-chat-dataset"
version = "0.1.0"
description = "Convert GitHub repos to Qwen chat JSONL for MLX fine-tuning"
authors = [{name = "Arjun Divecha"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[project.scripts]
gh-chat-dataset = "gh_chat_dataset.cli:main"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "S", "C4", "UP"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]