[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "gh-chat-dataset"
version = "0.1.0"
description = "One-shot tool to turn a GitHub repo (py/js + docs) into chat/messages JSONL for Qwen/MLX fine-tuning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Droid (Factory.ai)", email = "dev@factory.ai"}]
dependencies = [
  "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.9",
]

[project.scripts]
gh-chat-dataset = "gh_chat_dataset.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_chat_dataset"]

[tool.hatch.build.targets.sdist]
include = [
  "src/gh_chat_dataset",
  "README.md",
  "pyproject.toml",
  "LICENSE",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
